# urlencoded_query

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: readme_example.rs
src/: lib.rs
tests/: api.rs
